<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_moscow">В солнечной системе 8 планет?</string>
    <string name="question_andorra">Мексика - самая маленькая в мире страна.</string>
    <string name="question_atomium">Атомиум - достопримечательность Франции.</string>
    <string name="question_eswatini">Страна Эсватини называлась Свазилендом.</string>
    <string name="question_gobi">Самая большая пустыня в мире - Гоби</string>
    <string name="question_north_centre_america">Ростов город в Белоруссии.</string>
    <string name="question_buj_khalifa">Бурдж Халифа - самая высокая башня в мире.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Верно!</string>
    <string name="incorrect_toast">Неверно!</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="reset_button">Reset</string>
    <string name="answer_percent">0</string>
    <string name="warning_text">Вы правда хотите использовать подсказку?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Ответ с подсказкой.</string>
</resources>